<menu xmlns:android="http://schemas.android.com/apk/res/android" >
   
    <item
        android:id="@+id/mnu_search"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/mnu_search"/>
    
    <item
        android:id="@+id/mnu_showSystemApp"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/mnu_showAllApps"/>
    
    <item
        android:id="@+id/mnu_setSdPath"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/mnu_setSdPath"/>
  
    <item
        android:id="@+id/mnu_email"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/mnu_email"/>
   
    <item
        android:id="@+id/mnu_license"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/mnu_license"/>

</menu>
