<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <RelativeLayout
        android:id="@+id/row"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ImageView
            android:id="@+id/icon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp" />

        <net.sarangnamu.common.fonts.RobotoLightTextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="15dp"
            android:layout_toRightOf="@+id/icon"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <net.sarangnamu.common.fonts.RobotoLightTextView
            android:id="@+id/size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="6dp"
            android:layout_marginTop="3dp"
            android:textColor="@android:color/darker_gray"
            android:textSize="12sp" />

        <net.sarangnamu.common.fonts.RobotoLightTextView
            android:id="@+id/pkgName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/name"
            android:layout_below="@+id/name"
            android:layout_marginTop="5dp"
            android:maxWidth="@dimen/list_max"
            android:singleLine="true"
            android:textColor="@android:color/darker_gray"
            android:textSize="11sp" />

        <!-- android:layout_alignLeft="@+id/name" android:maxWidth="@dimen/list_max" -->

        <net.sarangnamu.common.fonts.RobotoLightTextView
            android:id="@+id/version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/pkgName"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@id/pkgName"
            android:textColor="#ff4100"
            android:textSize="9sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/btnLayout"
        android:layout_width="160dp"
        android:layout_height="70dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="-160dp"
        android:orientation="horizontal" >

        <net.sarangnamu.common.fonts.RobotoLightTextView
            android:id="@+id/sd"
            style="@style/btnLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/btn_sdcard_selector"
            android:text="@string/sdcard"
            android:textColor="#ffffff" />

        <net.sarangnamu.common.fonts.RobotoLightTextView
            android:id="@+id/email"
            style="@style/btnLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/btn_email_selector"
            android:text="@string/email" />

        <net.sarangnamu.common.fonts.RobotoLightTextView
            android:id="@+id/delete"
            style="@style/btnLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/btn_sdcard_selector"
            android:text="@string/delete"
            android:textColor="#ffffff" />
    </LinearLayout>

</RelativeLayout>